# rattin-public

./: .dockerignore  .env.example  .gitignore  AGENT_PROMPT.md  AGENT_PROMPT_CACHE.md  README.md  build-rattin.bat  build-rattin.ps1  deploy.sh  index.html  package-lock.json  package.json  server.js  server.ts  start.bat  tsconfig.frontend.json  tsconfig.json  vite.config.js
.github/workflows/: build-appimage.yml  release.yml
.mex/: config.json
.mex/context/: architecture.md  decisions.md  stack.md
.opencode/: opencode.json
install/: AppRun  build-appimage.sh  build-macos.sh  build-source-tarball.sh  build-windows.ps1  install-native.sh  install.ps1  install.sh  ldd-allowlist.txt  rattin-vpn  release-appimage.sh  test_install.sh
install/test/: Dockerfile.debian-12  Dockerfile.fedora-40  Dockerfile.ubuntu-22.04  Dockerfile.ubuntu-24.04  run-tests.sh  verify.sh
lib/: access-control.ts  bounded-map.js  cache-cleanup.ts  cache.js  cache.ts  debrid.ts  fingerprint.js  fingerprint.ts  idle-tracker.js  idle-tracker.ts  intro-detect.js  intro-detect.ts  media-utils.js  media-utils.ts  paths.ts  saved-list.ts  seek-index.js  seek-index.ts  server-context.js  server-context.ts  store.ts  tmdb-config.ts  torrent-caches.js  torrent-caches.ts  torrent-compat.js  torrent-compat.ts  torrent-scoring.js  torrent-scoring.ts  torrentio.ts  transcode.js  transcode.ts  types.ts  watch-history.ts
lib/cache/: bounded-map.ts  cache-cleanup.ts  cache.ts  torrent-caches.ts
lib/media/: anime-detect.ts  episode-markers.ts  fingerprint.ts  intro-detect.ts  introdb.ts  next-episode.ts  seek-index.ts  track-match.ts  transcode.ts
lib/plugins/: plugin-paths.ts  pubkey.ts  registry.ts  signing.ts  types.ts
lib/storage/: learned-offsets.ts  paths.ts  rc-sessions.ts  settings.ts  watch-history.ts
lib/torrent/: debrid.ts  prefetch.ts  server-context.ts  torrent-compat.ts  torrent-scoring.ts  torrentio.ts
packaging/linux/: build-appimage.sh  magnet-player.desktop  rattin.desktop
packaging/windows/: rattin.nsi
public/: index.html  plugin-index.json
routes/: cache.ts  debrid.ts  learn-offset.ts  media.js  media.ts  open-url.ts  plugins.ts  rc.js  rc.ts  search.js  search.ts  settings.ts  status.js  status.ts  storage.ts  stream.ts  tmdb.js  tmdb.ts  update.ts  vpn.ts  youtube.ts
shell/: CMakeLists.txt  main.cpp  main.qml  mpvbridge.cpp  mpvbridge.h  mpvobject.cpp  mpvobject.h  rattin.rc  shutdownhandler.h
src/: App.css  App.jsx  App.tsx  main.tsx  vite-env.d.ts
src/components/: CastList.css  CastList.jsx  ContentRow.css  ContentRow.jsx  ContentRow.tsx  HeroSection.css  HeroSection.jsx  HeroSection.tsx  MiniPlayer.css  MiniPlayer.tsx  MovieCard.css  MovieCard.tsx  Navbar.css  Navbar.jsx  Navbar.tsx  PairRemoteModal.css  PairRemoteModal.jsx  PairRemoteModal.tsx  PluginPrompt.css  PluginPrompt.tsx  QrScanner.jsx  QrScanner.tsx  RemoteNowPlaying.jsx  RemoteNowPlaying.tsx  SettingsModal.css  SettingsModal.tsx  SourcePicker.css  SourcePicker.tsx  TmdbSetup.tsx  UpdateSection.css  UpdateSection.tsx  WatchHistoryRow.css  WatchHistoryRow.tsx
src/lib/: BingeCoordinator.ts  PlayerContext.jsx  PlayerContext.tsx  api.js  api.ts  external-links.ts  home-cache.ts  magnet.ts  native-bridge.ts  playback-position.ts  remote-session.ts  useAudioTracks.js  useAudioTracks.ts  useIntro.js  useIntro.ts  useNextEpisode.ts  usePlayerLoading.js  usePlayerLoading.ts  useRefetchOnRecovery.ts  useSeek.js  useSeek.ts  useSubtitles.js  useSubtitles.ts  utils.js  utils.ts
src/pages/: Detail.css  Detail.jsx  Detail.tsx  Home.css  Home.jsx  Home.tsx  MyList.css  MyList.tsx  Player.css  Player.jsx  Player.tsx  Remote.css  Remote.jsx  (+3 more)
test/: binge-coordinator.test.ts  cache.test.js  cache.test.ts  external-links.test.ts  magnet.test.ts  media-utils.test.js  media-utils.test.ts  playback-position.test.ts  seek-index.test.js  seek-index.test.ts  subtitle-matching.test.ts  torrent-scoring.test.js  torrent-scoring.test.ts  torrentio.test.ts  utils.test.js  utils.test.ts
(+73 files in other folders)
